--- a/notebooks/5_model_test.ipynb
+++ b/notebooks/5_model_test.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5. Model test and preparation for the streamlit app\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +200,7 @@
        "4              0             0         0         0        0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,13 +213,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Load the model and the scaler and creating functions for the streamlit app"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the KMeans model and the scaler\n",
-    "kmeans_model = joblib.load('../Model/kmeans_model.pkl')\n",
+    "kmeans_model = joblib.load('../Model/kmeans_model_9.pkl')\n",
     "scaler = joblib.load('../Scaler/scaler.pkl')  # Load the saved scaler\n",
     "\n",
     "def prepare_song_data(song_info):\n",
@@ -322,8 +336,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Test the model on a song."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -331,29 +352,17 @@
      "output_type": "stream",
      "text": [
       "Recommended songs similar to 'Fly Me To The Moon (In Other Words)' by Frank Sinatra:\n",
-      "                                          spotify_title spotify_artist  \\\n",
-      "1394                                          This Love       Maroon 5   \n",
-      "1985                                 If I Ain't Got You    Alicia Keys   \n",
-      "2275         Driving Home for Christmas - 2019 Remaster      Chris Rea   \n",
-      "1547                                         Poker Face      Lady Gaga   \n",
-      "4009                               Don't Stop The Music        Rihanna   \n",
-      "349   Valerie (feat. Amy Winehouse) - Version Revisited    Mark Ronson   \n",
-      "4907                                       Chasing Cars    Snow Patrol   \n",
-      "3593                   Smooth Operator - Single Version           Sade   \n",
-      "4813                            Never Gonna Give You Up    Rick Astley   \n",
-      "834                                                 SOS        Rihanna   \n",
-      "\n",
-      "      popularity  cluster  \n",
-      "1394          81        0  \n",
-      "1985          80        0  \n",
-      "2275          80        0  \n",
-      "1547          80        0  \n",
-      "4009          80        0  \n",
-      "349           80        0  \n",
-      "4907          79        0  \n",
-      "3593          79        0  \n",
-      "4813          78        0  \n",
-      "834           76        0  \n"
+      "                      spotify_title    spotify_artist  popularity  cluster\n",
+      "2770            Ready For The Floor          Hot Chip          52        1\n",
+      "1829                            Sin   Nine Inch Nails          48        1\n",
+      "1023                    Nom Nom Nom          Hot Chip          47        1\n",
+      "1218      Chime (Edit) - Remastered           Orbital          46        1\n",
+      "2748                       Autobahn         Kraftwerk          45        1\n",
+      "4959  Computer Love - 2009 Remaster         Kraftwerk          43        1\n",
+      "2079                      The Frail   Nine Inch Nails          41        1\n",
+      "2940                 When I Grow Up         Fever Ray          40        1\n",
+      "2809                  Happy Cycling  Boards of Canada          38        1\n",
+      "1690                      Salva Mea         Faithless          37        1\n"
      ]
     },
     {
@@ -383,13 +392,6 @@
     "else:\n",
     "    print(f\"Song '{song_title}' by '{artist_name}' was not found in the database or on Spotify.\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
